# unipad-android

./: .gitignore  CLAUDE.md  README.ko.md  README.md  build.gradle  gradle.properties  keystore.properties.example  local.properties  settings.gradle
app/: CMakeLists.txt  app-release.apk  build.gradle  google-services.json  proguard-billing.pro  proguard-common.pro  proguard-firebase.pro  proguard-okhttp3.pro  proguard-retrofit2.pro  proguard-rules.pro  proguard-vungle.pro
app/release/: app-release.apk  output.json
app/src/debug/res/xml/: network_security_config.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  SoundBank.cpp  SoundBank.h  jni_bridge.cpp
app/src/main/res/anim/: activity_in.xml  activity_out.xml  fade_in.xml  pack_in.xml  pack_new_in.xml  panel_in.xml  panel_out.xml
app/src/main/res/drawable/: border_all_round_delete.xml  border_all_round_gray.xml  border_all_round_item.xml  border_apply.xml  border_apply_off.xml  border_apply_on.xml  border_bottom_round.xml  border_divider.xml  border_gray.xml  border_icon.xml  border_icon_off.xml  border_icon_on.xml  border_left_round.xml  border_no_round.xml  border_panel_pack.xml  border_panel_total.xml  border_play_blue.xml  border_play_gray.xml  border_play_gray_.xml  border_play_green.xml  border_play_orange.xml  border_right_round.xml  border_settings.xml  chain.xml  chain_.xml  chain__.xml  custom_logo.xml  ic_bookmark_border_24dp.xml  ic_bookmark_clip_back.xml  ic_bookmark_clip_front.xml  ic_bookmark_off.xml  ic_copy_24dp.xml  ic_delete_24dp.xml  ic_error.xml  ic_error_outline_24dp.xml  ic_exit.xml  ic_folder.xml  ic_info.xml  ic_launcher_foreground.xml  ic_led_event_24dp.xml  (+19 more)
app/src/main/res/layout/: activity_fbstore.xml  activity_importpack.xml  activity_intro.xml  activity_main.xml  activity_main_panel.xml  activity_main_panel_pack.xml  activity_main_panel_total.xml  activity_midi_select.xml  activity_play.xml  activity_setting.xml  activity_setting_legacy.xml  activity_settings.xml  activity_splash.xml  activity_store.xml  activity_store_panel_pack.xml  activity_store_panel_total.xml  activity_theme.xml  activity_usbmidi.xml  app_info.xml  button.xml  chain.xml  extend_automapping.xml  extend_delete.xml  file_explore.xml  file_explorer.xml  fragment_main_list.xml  fragment_main_pack_panel.xml  (+22 more)
(+668 files in other folders)
